--- a/main.html
+++ b/main.html
@@ -8,6 +8,55 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<h1>Tiger Zinda Hai</h1>
+	</header>
+	<nav>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote" id="nav-quote">Quote</a>
+	</nav>
+	<div class="image-card">
+		<img  class="image"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSs9rg58l09oOLXU_w3NR306J5iXVOfY1fPzmvmyyLgQtxWEs9A" width="250px">
+	
+	</div>
+	
+	<main>
+		<summary>
+			<p>
+				Tiger Zinda Hai is an action thriller that follows Indian RAW agent Tiger and Pakistani ISI agent Zoya as they reunite to rescue hostages held by a terrorist group in Iraq. The film is inspired by real events and celebrates teamwork, bravery, and humanity beyond borders.
+				
+			</p>
+			
+		</summary>
+		<section id="actor">
+			<h2>Actors In Movie</h2>
+			<ul>
+				<li><strong>Salman Khan</strong> as Tiger (Avinash Singh Rathore) — RAW agent</li>
+		        <li><strong>Katrina Kaif</strong> as Zoya — ISI agent and Tiger’s partner</li>
+		        <li><strong>Paresh Rawal</strong> as Firdaus — undercover agent</li>
+		        <li><strong>Sajjad Delafrooz</strong> as Abu Usman — the antagonist</li>
+			</ul>
+		</section>
+		<section id="qoute">
+			<h2>Favourite Quotes:</h2>
+			 <blockquote>
+        "Shikaar karne wale hamesha shikaar karne ka mauka dhoondte hain,  
+        par Tiger kabhi bhookha nahi rehta."
+      </blockquote>
+			 <p> — Tiger, reminding us that true power lies in control and purpose.</p>
+		</section>
+		<aside>
+			<h2>Movie Details</h2>
+			<p><strong>IMDb Rating:-</strong>⭐ 8.0/10</p>
+			<p><strong>Release Date:</strong> December 22, 2017</p>
+    
+			
+		</aside>
+		<footer>
+			Produced by: <strong>Aditya Chopra</strong>
+		</footer>
+	</main>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
