--- a/main.html
+++ b/main.html
@@ -37,8 +37,8 @@
 		        <li><strong>Sajjad Delafrooz</strong> as Abu Usman — the antagonist</li>
 			</ul>
 		</section>
-		<section id="qoute">
-			<h2>Favourite Quotes:</h2>
+		<section id="quote">
+			<h2>Favourite Quote:</h2>
 			 <blockquote>
         "Shikaar karne wale hamesha shikaar karne ka mauka dhoondte hain,  
         par Tiger kabhi bhookha nahi rehta."
